fixes to make it appear nice on mobile (iphone for now), via css media query

--- a/style/style.css
+++ b/style/style.css
@@ -11,3 +11,20 @@
 	vertical-align: middle;
 	margin-bottom: 2px;
 }
+
+@media only screen and (max-device-width: 480px) {
+	.fb-like {
+		float: left;
+		width: 100%;	
+	}
+
+	.fb-comments {
+		float:left;
+		width:100%;
+	}
+
+	div#page {
+		width: 480px;
+	}
+}
+
